static/css/style.css
/* ... */
code{
    color: #1aabf3;
    font-family: 'Poppins', sans-serif;
}

table, tr, th, td{
    border: 1px solid #E7E7E7;

}

table{
    table-layout: fixed;
}

td{
    word-wrap:break-all;  
} 


pre{
    overflow: auto;
}

.main-article blockquote {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
    border-left: 3px solid #E7E7E7;
    background: #fafafa;
}

.main-toc{
    /* max-width: 15rem;
    min-width: 15rem; */
    width: 20%;

    /* background-color:rgb(198, 241, 200); */
    border-left:1px dashed  #E7E7E7;
    padding-left: 1em;

    /* overflow:auto;
    white-space: nowrap; */
}

.main-toc a:hover{
    text-decoration: underline;
}

body #TableOfContents > ul {  
    padding-left: 0em;
    font-size: small;

}

body #TableOfContents > ul li { 
    padding-left: 1em;
    font-size:small;
}


footer{
    margin-top:-100px; 
    height: 100px; 
    width: 100%; 
    text-align: center; 
    line-height: 100px; 
    color: #ABA498; 
    background: #fafafa; 
    border-top:1px solid #E7E7E7;

}



:root {
    --menu-speed: 0.75s;
}

.menu-wrap {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
}
.menu-wrap .toggler {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    height: 2.5rem;
    width: 2.5rem;
    cursor: pointer;
    z-index: 2;
}
.menu-wrap .hamburger {
    position: absolute;
    top: 0;
    left: 0;
    height: 50px;
    width: 60px;
    background: transparent; 
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 1;
}

/* Hamburger line */
.menu-wrap .hamburger > div {
    position: relative;
    top: 0;
    left: 0;
    width: 1.6rem;
    height: 3px;
    background: rgb(20, 20, 20);
    flex: none;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.4s;
    opacity: 0;
}

/* Hamburger top & bottom line */
.menu-wrap .hamburger > div:before,
.menu-wrap .hamburger > div:after {
    content: "";
    position: absolute;
    /* top: 6px; */
    left: 0;
    background: inherit;
    /* height: 2px;
    width: 100%; */

    width: inherit;
    height: inherit;
    z-index: 1;
    border-radius: 3px;
}

.menu-wrap .hamburger div:before{
    transform: translateY(-7px);
}

.menu-wrap .hamburger div:after{
    transform: translateY(7px);
}

/* .menu-wrap .hamburger > div:after {
    top: -6px;
} */

/* Toggler Animation */
.menu-wrap .toggler:checked + .hamburger > div {
    transform: rotate(135deg);
}
.menu-wrap .toggler:checked + .hamburger > div:before,
.menu-wrap .toggler:checked + .hamburger > div:after {
    top: 0;
    transform: rotate(90deg);
}

/* Rotate on hover when checked */
.menu-wrap .toggler:checked:hover + .hamburger > div {
    transform: rotate(225deg);
}
.menu {
    padding-top: 50px;
    /* position: fixed
    top: 0;
    left: 0; */
    background: #ABA498;
    height: 100vh;
    width: 0vh;
    /* display: flex; */
    /* align-items: center;
    justify-content: center;
    text-align: center; */
    opacity: 0;
    transition: all var(--menu-speed) ease;
}
.menu > div {
    /* position: relative;
    top: 0;
    left: 0; */
    /* height: 100%;
    width: 100%;
    flex: none;
    display: flex; */
    /* align-items: center;
    justify-content: center;
    text-align: center; */
    opacity: 0;
    transition: opacity 0.4s ease-in;
}
.menu ul {
    list-style: none;
}

.menu ul li {
    margin: 10 0;
    padding-left: 1em;
    list-style: none;
    user-select: none;
}

.menu ol {
    list-style: none;
}

.menu li > ul, .menu li > ol {
	display: none;
    padding-left: 1em;
}


.menu input[type="checkbox"] {
	display: none;
	position: relative;
}
.menu input[type="checkbox"]:checked + ul, .tree-list input[type="checkbox"]:checked + ol{
	display: block;
} 

.menu > div a {
    text-decoration: none;
    color: #302d2d;
    font-size: 1.5rem;
    opacity: 0;
    transition: opacity 1s ease-in;
}
.menu a:hover {
    color: rgb(230, 177, 177);
    transition: color 0.3s ease-in;
}

/* Show Menu */
.menu-wrap .toggler:checked ~ .menu {
    opacity: 1;
    width: 90vw;
    transition: all var(--menu-speed) ease;
}
.menu-wrap .toggler:checked ~ .menu > div {
    opacity: 1;
    transition: opacity 0.4s ease-in;
}
.menu-wrap .toggler:checked ~ .menu > div a {
    opacity: 1;
    transition: opacity 1s ease-in;
}
/* ... */

